--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="digitsensitive" />
     <title>Super Mario Land</title>
-    <script src="dist/bundle.js"></script>
+    <script src="bundle.js"></script>
   </head>
   <body>
     <h1>Super Mario Land</h1>
